# finetuning-proof-datasets-5b00

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  requirements.txt  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
notebooks/: 2025-12-01-12-38_FinetuningProofResearch.ipynb
papers/: README.md
results/: evaluation_results.json
